--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,13 +22,12 @@
             <TextView
                 android:layout_width="392dp"
                 android:layout_height="wrap_content"
-                android:background="#6D6767"
+                android:background="#BC3A4042"
                 android:text="TASTY"
                 android:textAlignment="center"
                 android:textColor="#F8FAFA"
-                android:textSize="45dp"
-                android:textStyle="bold"/>
-
+                android:textSize="40dp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn25"
@@ -38,6 +37,7 @@
                 android:text="ASIAN RECIPES"
                 android:layout_marginTop="20dp"
                 android:textColor="#ffff"
+                android:textStyle="bold"
                 android:textSize="36sp" />
             <Button
                 android:id="@+id/btn26"
@@ -46,6 +46,7 @@
                 android:background="@drawable/japanis"
                 android:layout_marginTop="20dp"
                 android:text="JAPANESE RECIPES"
+                android:textStyle="bold"
                 android:textColor="#ffff"
                 android:textSize="36sp" />
             <Button
@@ -54,9 +55,11 @@
                 android:layout_height="200dp"
                 android:background="@drawable/american"
                 android:layout_marginTop="20dp"
-                android:text="OTHER COUNTRYS RECIPES"
+                android:text="OTHER COUNTRIES RECIPES"
+                android:textStyle="bold"
                 android:textColor="#ffff"
                 android:textSize="36sp" />
+
 
 
 
