--- a/app/src/main/res/layout/activity_asianchicken.xml
+++ b/app/src/main/res/layout/activity_asianchicken.xml
@@ -5,5 +5,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".asianchicken">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        >
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
+                android:text="-> Ingredient Required"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="casual"
+                android:text="@string/asian_chicken_ind"
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
+                android:text="-> Direction to Prepare"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="@string/asian_chicken_pro"
+                android:layout_marginStart="12dp"
+                android:textColor="#070707"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
 </RelativeLayout>
