--- a/app/src/main/res/layout/activity_chickensoup.xml
+++ b/app/src/main/res/layout/activity_chickensoup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ricepudding">
+    tools:context=".chickensoup">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,9 +24,20 @@
                 android:layout_height="wrap_content"
                 android:background="#ADFFC400"
                 android:fontFamily="casual"
+                android:text="Chicken soup"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
                 android:text="-> Ingredient Required"
                 android:textAlignment="center"
                 android:textColor="#070707"
+                android:layout_marginTop="20dp"
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
@@ -36,7 +47,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="casual"
-                android:text="@string/rice_pudding_ind"
+                android:text="@string/chicken_tanduri_ind"
                 android:textColor="#000000"
                 android:textSize="25dp"
                 android:textStyle="bold"/>
@@ -54,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="casual"
-                android:text="@string/rice_pudding_pro"
+                android:text="@string/chicken_tanduri_pro"
                 android:layout_marginStart="12dp"
                 android:textColor="#070707"
                 android:layout_marginTop="20dp"
@@ -67,6 +78,5 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 </RelativeLayout>
