--- a/app/src/main/res/layout/activity_asian.xml
+++ b/app/src/main/res/layout/activity_asian.xml
@@ -20,7 +20,15 @@
             android:orientation="vertical">
 
 
-
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#8ADFD225"
+                android:fontFamily="cursive"
+                android:text="ASIAN"
+                android:textAlignment="center"
+                android:textColor="#0A0A0A"
+                android:textSize="40dp" />
             <Button
                 android:id="@+id/btn28"
                 android:layout_width="wrap_content"
