--- a/app/src/main/res/layout/activity_japenis.xml
+++ b/app/src/main/res/layout/activity_japenis.xml
@@ -20,6 +20,16 @@
 
 
 
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:text="JAPENIS"
+                android:textColor="#0A0A0A"
+                android:textAlignment="center"
+                android:fontFamily="cursive"
+                android:background="#8B85D814"
+                android:textSize="40dp"
+                 />
             <Button
                 android:id="@+id/btn32"
                 android:layout_width="wrap_content"
