--- a/app/src/main/res/layout/activity_chickensoup.xml
+++ b/app/src/main/res/layout/activity_chickensoup.xml
@@ -50,7 +50,8 @@
                 android:text="@string/chicken_tanduri_ind"
                 android:textColor="#000000"
                 android:textSize="25dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginLeft="12dp" />
             <TextView
                 android:layout_width="392dp"
                 android:layout_height="wrap_content"
@@ -70,7 +71,16 @@
                 android:textColor="#070707"
                 android:layout_marginTop="20dp"
                 android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginLeft="12dp" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="Click here to listen"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:background="#ADFFC400"
+                android:onClick="play"/>
 
 
 
