--- a/app/src/main/res/layout/activity_friedrice.xml
+++ b/app/src/main/res/layout/activity_friedrice.xml
@@ -1,9 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".friedrice">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
+                android:text="Hibachi Chicken and Fried Rice"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
+                android:text="-> Ingredient Required"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:layout_marginTop="20dp"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="casual"
+                android:text="@string/fried_rice_ind"
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="12dp" />
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#ADFFC400"
+                android:fontFamily="casual"
+                android:text="-> Direction to Prepare"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="casual"
+                android:text="@string/fried_rice_pro"
+                android:layout_marginStart="12dp"
+                android:textColor="#070707"
+                android:layout_marginTop="20dp"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="12dp" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="Click here to listen"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:background="#ADFFC400"
+                android:onClick="play"/>
+
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
