--- a/app/src/main/res/layout/activity_fruits.xml
+++ b/app/src/main/res/layout/activity_fruits.xml
@@ -1,9 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fruits">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:background="#615922"
+                android:text="FRUITS"
+                android:textAlignment="center"
+                android:textColor="#F8FAFA"
+                android:textSize="40dp"
+                android:textStyle="bold"
+                android:gravity="center_horizontal" />
+
+            <Button
+                android:id="@+id/btn40"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/mango"
+                android:text="Mango"
+                android:textColor="#FFFFFF"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+            <Button
+                android:id="@+id/btn41"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:background="@drawable/orange"
+                android:layout_marginTop="20dp"
+                android:text="Orange"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+                android:textSize="36sp" />
+            <Button
+                android:id="@+id/btn42"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:background="@drawable/watermelon"
+                android:layout_marginTop="20dp"
+                android:text="Watermelon"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+                android:textSize="36sp" />
+            <Button
+                android:id="@+id/btn43"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:background="@drawable/apple"
+                android:layout_marginTop="20dp"
+                android:text="Apple"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+                android:textSize="36sp" />
+
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
