--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,8 @@
                 android:textAlignment="center"
                 android:textColor="#F8FAFA"
                 android:textSize="40dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center_horizontal" />
 
             <Button
                 android:id="@+id/btn25"
